sumo/tests/netconvert/errors/false_output/errors.netconvert
Error: The output file "output/net.net.xml" can not be build.
Quitting (on error).
